# two-dim-sim

./: CMakeLists.txt  README.md  main.cpp  settings.yaml  settings_centralized.yaml  settings_ci.yaml  settings_naive.yaml  settings_pf_naive.yaml  settings_pf_ori.yaml  settings_pf_ori_naive.yaml  settings_pf_ori_proposed.yaml  settings_pf_proposed.yaml  settings_proposed.yaml
include/: ci.hpp  simbase.hpp  simcent.hpp  simci.hpp  simcons.hpp  simnaive.hpp  simnonparam.hpp  simparam.hpp  simpfcons.hpp
results/: notes.md
src/: ci.cpp  main.cpp  simbase.cpp  simcent.cpp  simci.cpp  simcons.cpp  simnaive.cpp  simnonparam.cpp  simparam.cpp  simpfcons.cpp
